# plant-manager

./: .gitignore  Dockerfile  Dockerfile-Frontend  README.md  cargo.toml  docker-compose.yaml
_docker_dev/database_only/: docker-compose.yaml
_docker_dev/entire_service/: Dockerfile  docker-compose.yaml
backend/: Cargo.toml  README.md  fly.toml
backend/migrations/: 20250822041920_initial_plants.sql  20250827022951_plant_events.sql  20250827023048_plant_event_types.sql  20250827024055_default_event_types.sql  20250827191451_deleted_plants.sql  20250902141408_events_unique.sql  20251005215143_photos.sql
backend/src/: main.rs
backend/src/app/: mod.rs
backend/src/app/events/: get_event_types.rs  get_events.rs  mod.rs  new_event.rs  new_event_type.rs
backend/src/app/photos/: mod.rs  new_photo.rs
backend/src/app/plants/: delete.rs  get_demographic.rs  get_full_plant.rs  get_plant_list.rs  mod.rs  modify_plant.rs  plant_demographic.rs  plant_events.rs  plant_new.rs  plants_access.rs  plants_verification.rs
backend/src/static_support/: mod.rs
frontend/: Cargo.toml  README.md  Trunk.toml  bacon.toml  build.rs  index.html  input.css  package-lock.json  package.json
frontend/conf/: app.conf
frontend/public/: styles.scss
frontend/public/config/: config.yaml  frontend-config.yaml
frontend/src/: lib.rs  main.rs  plant_storage.rs  server_helpers.rs  theme.rs
frontend/src/components/: counter_btn.rs  footer.rs  gallery.rs  mod.rs  navbar.rs  new_plant.rs  plant_card.rs
frontend/src/components/navigation_components/: link.rs
frontend/src/components/plant_components/: event.rs  event_display.rs  mod.rs  photo.rs  photo_placeholder.rs  single_event.rs
frontend/src/data_storage/: mod.rs
frontend/src/data_storage/events/: event_storage.rs  mod.rs
frontend/src/data_storage/plants/: list.rs  mod.rs
frontend/src/pages/: gallery.rs  home.rs  mod.rs  new_plant.rs
frontend/src/pages/plant_page/: mod.rs
plant-manager-backend/: CONTRIBUTING.md  Cargo.toml  bacon.toml
plant-manager-backend/src/: main.rs
plant-manager-frontend/: Cargo.toml
plant-manager-frontend/src/: main.rs
plant-manager-frontend/src/components/: counter_btn.rs
plant-manager-frontend/src/pages/: home.rs
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/events/: events_http.rs  mod.rs
shared/src/photos/: mod.rs
shared/src/plant/: mod.rs  plant_events.rs  plant_http.rs
