# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "plant-manager-backend"
version = "0.1.0"
description = "Plant Manager Backend"
authors = ["Noah <noahshomette@gmail.com>"]
edition = "2024"
rust-version = "1.85"
license-file = "LICENSE"
readme = "README.md"
documentation = "https://github.com/noahshomette/plant-manager-backend"
homepage = "https://github.com/noahshomette/plant-manager-backend"
repository = "https://github.com/noahshomette/plant-manager-backend"
keywords = ["plant-manager-backend"]

[badges]
maintenance = { status = "actively-developed" }

[[bin]]
name = "plant-manager-backend"
path = "src/main.rs"

[dependencies]
axum = "0.8"

# https://docs.rs/axum-extra/latest/axum_extra/
axum-extra = "0.10"

tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "any", "postgres"] }
